<resources>
    <string name="app_name">MathHelperprj</string>
    <string name="username">نام کاربری</string>
    <string name="password">گذرواژه</string>
    <string name="login">ورود</string>
    <string name="singin">ثبت نام نکردی؟ اینجا کلیک کن</string>
    <string name="regidter">ثبت نام</string>
    <string name="back">بازگشت</string>
    <string name="enterusername">لطفا نام کاربری را وارد کنید.</string>
    <string name="enterpassword">لطفا گذرواژه را وارد کنید.</string>
    <string name="notmatch">رمز ها با هم یکی نیستند!</string>
    <string name="please">لطفا صبور باشید..</string>
    <string name="error">خطا در ارتباط با سرور!</string>
    <string name="ex">نام کاربری یا رمز اشتباه است!</string>
    <string name="old">این نام کاربری قبلا استفاده شده است</string>
    <string name="no">خطا در فرایند ثبت نام!</string>
    <string name="more">بیشتر</string>
    <string name="grade7">پایه هفتم</string>
    <string name="grade8">پایه هشتم</string>
    <string name="grade9">پایه نهم</string>
    <string name="welcome">خوش آمدید :-)</string>
    <string name="name">نام فیلم : </string>
    <string name="lesson">نام درس : </string>
    <string name="play">نمایش آنلاین</string>
    <string name="eno">شما این فیلم را خریداری نکردید!</string>
    <string name="dl_1">پخش با کیفیت 480</string>
    <string name="dl_2">پخش با کیفیت 720</string>
    <string name="dl_3">پخش با کیفیت 1080</string>
    <string name="content">در حال بارگذاری ویدیو...</string>
    <string name="hint">جستوجو کنید...</string>
    <string name="empty">شما چیزی وارد نکردید!</string>
    <string name="views">بازدیدکننده ها :</string>
    <string name="share">به وب سایت ما سر بزنید : </string>
    <string name="likes">لایک ها</string>
    <string name="el">خطا در ثبت یا حذف لایک!</string>
    <string name="l">لایک ثبت شد</string>
    <string name="d">لایک لغو شد</string>
    <string name="notfound">موردی یافت نشد!</string>
    <string name="write">نظر یا سوال خود را بنویسید...</string>
    <string name="notc">کامنتی وارد نشده!</string>
    <string name="erco">خطا در ثبت کامنت!</string>
    <string name="su">کامنت ثبت شد.</string>
    <string name="bay">محصولات خریداری شده</string>
    <string name="devin">درباره سازنده</string>
    <string name="teachin">درباره مدرس</string>
    <string name="home">صفحه اول</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="me">علیرضا ابریشمی</string>
    <string name="email">masiha.abrishami@gmail.com</string>
    <string name="ok">باشه</string>
</resources>
