<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mathhelper"
    android:padding="10dp"
    tools:context=".Register">

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#000000"
        android:textColorHint="#000000"/>

    <Button
        android:id="@+id/register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:onClick="reactions"
        android:text="@string/regidter"
        tools:ignore="OnClick" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_username"
        android:ems="10"
        android:gravity="right"
        android:hint="رمز عبور"
        android:inputType="textPassword"
        android:text=""
        android:textColor="#000000"
        android:textColorHint="#000000"/>

    <EditText
        android:id="@+id/register_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/register_password"
        android:ems="10"
        android:gravity="right"
        android:hint="تکرار رمز عبور"
        android:inputType="textPassword"
        android:text=""
        android:textColor="#000000"
        android:textColorHint="#000000"/>

    <Button
        android:id="@+id/register_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:onClick="reactions"
        android:text="@string/back"
        tools:ignore="OnClick" />

</RelativeLayout>