<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gb"
            tools:context=".Main3Activity">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/grade7"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/more"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_grade_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView2"
                        android:layout_marginTop="10dp" />

                    <View
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/list_grade_7"
                        android:layout_marginTop="20dp"
                        android:background="#000000" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/line1"
                        android:text="@string/grade8"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/line1"
                        android:text="@string/more"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_grade_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView4"
                        android:layout_marginTop="10dp" />

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/list_grade_8"
                        android:layout_marginTop="20dp"
                        android:background="#000000" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/line2"
                        android:text="@string/grade9"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/line2"
                        android:text="@string/more"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_grade_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView6"
                        android:layout_marginTop="10dp" />

                </RelativeLayout>

            </ScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:src="@android:drawable/ic_menu_search" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="16dp"
                android:onClick="share"
                android:src="@android:drawable/ic_menu_share"
                app:backgroundTint="@color/colorPrimary" />

        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:headerLayout="@layout/header"
        app:itemTextColor="@color/darkgray"
        app:menu="@menu/items">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>

